# mercury-mcp

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
docs/: launch-posts-NORIKA-VOICE.md  launch-posts.md  zenodo-setup.md
examples/: claude-code-config.json  example-prompts.md
mercury_mcp/: __init__.py  data_loader.py  server.py
tests/: test_data_loader.py
