[project]
name = "mercury-mcp"
version = "0.1.0"
description = "MCP server exposing Mercury — cross-architecture LLM internal observation data — to AI coding agents"
authors = [{name = "norika (Chen Ho Yiing)", email = "abbychen981008@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/norika1207-lab/mercury-mcp"
"Paper Data" = "https://zenodo.org/communities/mercury-llm"

[project.scripts]
mercury-mcp = "mercury_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mercury_mcp"]
